tests/baselines/reference/u-unicode-esc-non-hex.errors.txt
u-unicode-esc-non-hex.ts(14,6): error TS1199: Unterminated Unicode escape sequence.
u-unicode-esc-non-hex.ts(14,7): error TS1506: Unexpected '}'. Did you mean to escape it with backslash?
u-unicode-esc-non-hex.ts(14,9): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== u-unicode-esc-non-hex.ts (3 errors) ====
    // Copyright (C) 2015 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    description: >
        Non-hexadecimal value within the delimiters of a UnicodeEscapeSequence
    es6id: 21.2.1
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /\u{1,}/u;
         
!!! error TS1199: Unterminated Unicode escape sequence.
          ~
!!! error TS1506: Unexpected '}'. Did you mean to escape it with backslash?
            ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    